# phoenix

./: Cargo.toml  README.md
incinerator/: Cargo.toml  README.md
incinerator-cli/: Cargo.toml
incinerator-cli/src/: main.rs
incinerator-uffd/: Cargo.toml
incinerator-uffd/src/: main.rs  runtime.rs
incinerator/src/: compression.rs  decompress.rs  diff.rs
phoenix/: Cargo.toml
phoenix/src/: main.rs
src/: compress.rs  decompress.rs  diff.rs  lib.rs  main.rs  page.rs
