[package]
name = "incinerator"
version = "0.1.1"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", default-features = false, features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
lz4_flex = { version = "0.12.0", optional = true }
rand = "0.9.2"
rustc-hash = "2.1.1"
tracing = { version = "0.1.41", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]
zstd_recompress = ["dep:zstd"]
lz4_recompress = ["dep:lz4_flex"]

[profile.profile]
inherits = "release"
debug = true

