[package]
name = "incinerator-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.53", features = ["derive"] }
incinerator = {path = "../incinerator", version = "0.1.1", features = ["zstd", "lz4"]}
rand = "0.9.2"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

[features]
default = []
tracing = ["incinerator/tracing"]
fixed_seed = []

[profile.release]
lto = "fat"
