[package]
name = "phoenix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
micro_http = { git = "https://github.com/firecracker-microvm/micro-http.git" }
incinerator = { path = "../incinerator", features = ["zstd", "lz4"] }
tracing = "0.1.43"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = "0.3.22"
rand = "0.9.2"
userfaultfd = "0.9.0"
vmm-sys-util = "0.15.0"
libc = "0.2.178"
